# gilbert-shannon-reeds

./: .cspell.json  .hound.yml  .jscpd.json  .landscape.yml  .markdown-link-check.json  .mdl.rb  .mega-linter.yml  .overcommit.yml  .pre-commit-config.yaml  .prettierignore  .pylintrc  .scrutinizer.yml  .textlintrc.json  .travis.yml  Gemfile  Gilbert-Shannon-Reeds.html  Gilbert-Shannon-Reeds.ipynb  Gilbert-Shannon-Reeds.py  LICENSE  README.md  gilbert_shannon_reed.html  gilbert_shannon_reed.ipynb  gilbert_shannon_reed.py  mlc_config.json  project-words.txt  pyproject.toml  requirements.in  requirements.txt  tox.ini  update-requirements.sh
.deadpendency/: config.yaml
.github/: deadpendency.yaml  dependabot.yml  mergify.yml
.github/workflows/: codeql-analysis.yml  mega-linter.yml  pull-requests-and-pushes.yml  pull-requests.yml
ci/: travis.before_cache.sh  travis.before_install.sh  travis.install.sh  travis.script.sh  travis_retry.sh  update-requirements
